--- a/src/main/frontend/src/components/ViewModeToggle.scss
+++ b/src/main/frontend/src/components/ViewModeToggle.scss
@@ -31,6 +31,11 @@
       .toggle-icon {
         left: 4px;
       }
+
+      .toggle-track {
+        justify-content: flex-end;
+        padding-right: 16px;
+      }
     }
 
     // Experimental Mode (Green Theme)
@@ -39,6 +44,11 @@
 
       .toggle-icon {
         left: calc(100% - 52px);
+      }
+
+      .toggle-track {
+        justify-content: flex-start;
+        padding-left: 16px;
       }
     }
 
@@ -50,7 +60,6 @@
       height: 100%;
       display: flex;
       align-items: center;
-      justify-content: center;
       z-index: 1;
 
       .toggle-label {
